--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-formly": "^8.2.1",
     "angular-animate": "^1.5.7",
     "angular-messages": "^1.5.7",
-    "angular-formly-templates-bootstrap": "^6.3.2"
+    "angular-formly-templates-bootstrap": "^6.3.2",
+    "ng-lodash": "^0.5.0"
   }
 }
